# samdul07food

./: .firebaserc  .pdm-python  Dockerfile  README.md  pyproject.toml  vhost.conf
.firebase/: hosting.cHVibGlj.cache
public/: .index.html.swp  index.html  index_back.html
src/samdul07food/: .main.b.swp  main.csv.py  main.py
